added some html to index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
+
+
+    <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, amet.</h1>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis itaque fugit, illum quasi laudantium ipsum voluptas perferendis culpa esse saepe eveniet at reiciendis animi distinctio sunt tempore vitae. Sit, cupiditate.</p>
+
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos, tenetur mollitia exercitationem excepturi numquam accusantium ratione quam omnis vitae aliquid illum a unde perferendis? Doloremque accusamus beatae veniam nisi inventore nemo neque, corrupti, nam, culpa qui delectus provident fugit ipsa doloribus ipsam possimus ut officiis temporibus cupiditate. Dolores, maiores sapiente.</p>
+
+
     
 </body>
 </html>
